[package]
name = "yap"
version = "0.3.1"
edition = "2021"
authors = ["James Wilson <james@jsdw.me>"]
description = "Yet Another Parser library. A lightweight, dependency free, parser combinator inspired set of utility methods to help with parsing strings and slices."
repository = "https://github.com/jsdw/yap"
homepage = "https://github.com/jsdw/yap"
license = "MIT"
categories = ["parsing"]

[dependencies]
