[package]
name = "yap"
version = "0.8.0"
edition = "2021"
authors = ["James Wilson <james@jsdw.me>"]
description = "Yet Another Parser library. A lightweight, dependency free, parser combinator inspired set of utility methods to help with parsing strings and slices."
repository = "https://github.com/jsdw/yap"
homepage = "https://github.com/jsdw/yap"
license = "MIT"
categories = ["parsing"]

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dev-dependencies]
logos = "0.12.0"
